# kicad-unwn-plugins

./: .gitignore  CLAUDE.md  README.md  progress.txt  pyproject.toml
.github/workflows/: build.yml  ci.yml  release.yml
docs/: capacitive-touch-design-guidelines.md  plan-v2.md  plan.md  return-path-checker-v1-spec.md  touch-footprint-tools-landscape.md  usage.md
kicad-plugin/: README.md  entry.py  make_icons.py  plugin.json  requirements.txt
packaging/: build-binary.sh  build_pcm.py  captouch.spec  captouch_entry.py
plugins/captouch/: README.md  entry.py  plugin.json  requirements.txt
plugins/returnpath/: README.md  entry.py  make_icons.py  plugin.json  requirements.txt
prototypes/return-path-geometry-spike/: .gitignore  findings.json  report.py  report.txt  retest.py  retest.txt  spike.py
ralph/: afk-ralph.sh  ralph-once.sh
src/captouch/: __init__.py  cli.py  engine.py
src/captouch/export/: __init__.py  dxf.py  footprint.py  iqs550.py  symbol.py
src/captouch/geometry/: __init__.py  _base.py  keypad.py  slider.py  trackpad.py  wheel.py
src/captouch/gui/: __init__.py  _panel_base.py  app.py  panel.py  preview.py  trackpad_panel.py  wheel_panel.py
src/captouch/params/: __init__.py  advisory.py  device.py  fab.py  slider.py  trackpad.py  wheel.py
tests/: _board.py  conftest.py  test_advisory.py  test_cli.py  test_device.py  test_emit_validation.py  test_engine.py  test_export_slider.py  test_fab.py  test_geometry.py  test_gui.py  test_iqs550_export.py  test_keypad_export.py  test_keypad_geometry.py  test_kicad_cli.py  test_kicad_core.py  test_mutual_slider_export.py  test_params.py  test_pcm_package.py  test_plugin_library.py  test_plugin_manifest.py  test_presets.py  test_returnpath.py  test_returnpath_checks.py  test_returnpath_classify.py  test_returnpath_config.py  test_returnpath_panel.py  test_returnpath_plugin.py  test_returnpath_reports.py  test_returnpath_waivers.py  test_roundtrip.py  test_sensing_export.py  test_support_export.py  test_trackpad_export.py  test_trackpad_geometry.py  test_trackpad_params.py  test_wheel_export.py  test_wheel_geometry.py  test_wheel_params.py
tests/fixtures/returnpath/: classify_board.kicad_pcb  edge_via_board.kicad_pcb  legacy_board.kicad_pcb  split_board.kicad_pcb
tests/golden/: CT_Keypad_3x4.kicad_mod  CT_Keypad_3x4.kicad_sym  CT_Slider_Rect.kicad_mod  CT_Slider_Rect.kicad_sym  CT_Trackpad_3x3_Circle.kicad_mod  CT_Trackpad_3x3_RRect.kicad_mod  CT_Wheel_Rect.kicad_mod  CT_Wheel_Rect.kicad_sym  CT_Wheel_Spiral.kicad_mod  CT_Wheel_Spiral.kicad_sym
