[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kicad-captouch"
version = "0.1.0"
description = "Parametric generator for capacitive-touch interface footprints (sliders, wheels, XY pads) for KiCad"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Ciro Caputo Viglione" }]
keywords = ["kicad", "capacitive-touch", "footprint", "pcb", "eda", "slider", "trackpad"]
dependencies = ["shapely>=2.0"]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.6", "mypy>=1.8", "PySide6>=6.6"]
# Standalone-binary build toolchain (PyInstaller bundles the GUI, so pull it in).
packaging = ["kicad-captouch[gui]", "pyinstaller>=6"]

[project.scripts]
captouch = "captouch.cli:main"

[project.gui-scripts]
captouch-gui = "captouch.gui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/captouch"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Default rules (pyflakes + a subset of pycodestyle) plus import sorting.
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.10"
files = ["src/captouch"]
# shapely and PySide6 ship no type stubs; don't fail on their missing imports.
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["captouch"]
branch = true
