# Virtual workspace root for the kicad-plugins monorepo.
#
# Each tool is its own package under packages/ with its own pyproject.toml
# (hatchling build backend); this root only wires the uv workspace and holds the
# shared lint/type/test configuration. There is deliberately no [project] here —
# the root ships nothing, it just aggregates the members.
[tool.uv.workspace]
members = ["packages/*"]

# Resolve workspace members from the dev/packaging groups below, not PyPI.
[tool.uv.sources]
kicad-captouch = { workspace = true }
kicad-returnpath = { workspace = true }
kicad-core = { workspace = true }

# `uv sync` installs the default `dev` group, giving captouch + returnpath editable
# plus the full lint/type/test toolchain. `packaging` is opt-in (binary build).
[dependency-groups]
dev = ["kicad-captouch[dev]", "kicad-returnpath[dev]"]
packaging = ["kicad-captouch[packaging]"]

[tool.pytest.ini_options]
pythonpath = [
    "packages/kicad-captouch/src",
    "packages/kicad-returnpath/src",
    "packages/kicad-core/src",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
# First-party roots so import sorting groups `captouch`/`returnpath`/`kicad_core`
# separately from third-party packages (package src lives under packages/).
src = [
    "packages/kicad-captouch/src",
    "packages/kicad-returnpath/src",
    "packages/kicad-core/src",
    "tests",
    "packaging",
]

[tool.ruff.lint]
# Default rules (pyflakes + a subset of pycodestyle) plus import sorting.
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.10"
files = [
    "packages/kicad-captouch/src/captouch",
    "packages/kicad-returnpath/src/returnpath",
    "packages/kicad-core/src/kicad_core",
]
# So each tool's `from kicad_core import ...` resolves under mypy without relying
# on the editable install being present.
mypy_path = [
    "packages/kicad-captouch/src",
    "packages/kicad-returnpath/src",
    "packages/kicad-core/src",
]
# shapely and PySide6 ship no type stubs; don't fail on their missing imports.
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["captouch", "returnpath", "kicad_core"]
branch = true
